[package]
name = "mqtt-proxy"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["macros","rt-multi-thread", "sync", "tracing"] }
rumqttc = { version = "0.24.0", features = ["use-rustls"] }
lazy_static = "1.4.0"
futures = "0.3.29"
thiserror = "1.0.50"
anyhow = "1.0.86"
tracing = {version = "0.1.40"}
tracing-subscriber = {version = "0.3.17", features = ["fmt","env-filter"]}
tracing-log = "0.2.0"
ctrlc = {version="3.4.2", features=["termination"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = { version = "1.0.108", features = [] }
